# Kairos-BE

./: .gitignore  .prettierrc.js  README.md  buysellpoint.pine  debug.py  eslint.config.js  example.env  jest.config.js  package.json  pyproject.toml  sst-env.d.ts  sst.config.ts  sync_config.yml  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
backtest/: package.json  tsconfig.json
backtest/app/: layout.tsx  page.tsx
backtest/components/: report-viewer.tsx
backtest/styles/: globals.css
config/: scheduled-tasks.json
core/: pyproject.toml  sst.pyi  test_config.py
core/src/core/: __init__.py  calculator.py  db.py  ping.py
core/src/core/backtest/: __init__.py  data_provider.py  engine.py  strategy.py
core/src/core/config/: settings.py
core/src/core/data/: __init__.py  akshare_client.py  securities_repository.py
core/src/core/data_collector/: calendar.py
core/src/core/data_collector/fx/: catalog.py
core/src/core/data_collector/gold/: catalog.py
core/src/core/data_collector/index/: catalog.py  quotes.py
core/src/core/data_collector/stock/: cn_stock_catalog.py  daily_quotes.py  financials.py  spot_data_collector.py  sync.py  us_stock_catalog.py
core/src/core/data_collector/stock/scripts/: debug_financials_flat.py
core/src/core/database/: Company.py  IndexData.py  MarketData.py  StockData.py  __init__.py  client.py  exceptions.py  keys.py  repository.py  types.py
core/src/core/models/: __init__.py  securities.py
core/src/core/services/: __init__.py  market_sync_service.py  securities_sync_service.py
core/src/core/strategy/: __init__.py
core/src/core/strategy/fundamental/: __init__.py  low_pe_momentum.py
core/src/core/strategy/technical/: __init__.py  swing_falcon.py
core/src/core/universe/: __init__.py  swing_falcon.py
core/tests/: test_backtest_engine.py  test_calculator.py  test_cn_daily_quotes.py  test_cn_stock_quotes_utils.py  test_database_keys.py  test_fetch_retries.py  test_financials.py  test_index_quotes_sources.py  test_indexdata_decimal.py  test_repository_retries.py  test_spot_data_collector.py  test_stock_sync_plans.py  test_stockdata_decimal.py  test_sync_lambdas.py
deploy/: index.ts  types.ts
deploy/api/: graphql.ts  rest.ts
deploy/auth/: cognito.ts
deploy/cron/: tasks.ts
deploy/cron/jobs/: company-sync.ts  ingest-cn-stocks.ts  overall-report.ts  sync-index-quotes.ts  sync-market-data.ts
deploy/database/: company.ts  dynamodb.ts  index-data.ts  market-data.ts  reports.ts  stock-data.ts
deploy/secrets/: index.ts
deploy/shared/: linkables.ts
docs/: DOCUMENTATION_STRUCTURE.md  LOCAL_DEVELOPMENT.md  PROJECT_CONTEXT.md  README.md  TODO.md
docs/business/: modules-overview.md  overall-report-tools.md
docs/data/: asset-catalog.md
docs/development/: ai-agent-architecture.md  ai-agent-implementation.md  ai-sdk-5-upgrade.md  catalog-sync.md  data-crawler-architecture.md  database-layer.md  deployment-architecture.md  deployment-guide.md  documentation-cleanup.md  framework-deployment.md  framework-overview.md  lint-staged-setup.md  path-aliases.md  production-test-setup.md  quick-deployment-test.md  refactoring-summary.md  simple-deployment.md
docs/overview/: business-model.md  business-scenarios.md  project-introduction.md
functions/: README.md  nodejs_crawler.js  pyproject.toml  python_crawler.py  sst.pyi  test_crawler.py  tsconfig.json
functions/nodejs/: get_company.ts  get_report.ts  get_report_by_id.ts  get_snapshot.ts  get_timeseries.ts  list_catalog.ts  overall_report.ts  search_catalog.ts
functions/python/: debug_cn_stocks.py  sync_cn_stocks.py  sync_company.py  sync_index_quotes.py  sync_market_data.py
functions/python/tests/: test_sync_company_helpers.py
functions/src/functions/: api.py  handler.py  python_crawler.py  securities_sync_handler.py  sync_market_data.py
functions/src/handlers/node/: overall_report.ts
scripts/: deploy-prod.sh  run_backtest.py  sync_companies_local.py  validate_index_quotes.py  verify-deployment.sh
src/__tests__/: market.get_timeseries.test.ts  market_list_catalog.test.ts  market_search.test.ts
src/ai/: agent.ts  client.ts  config.ts  index.ts
src/ai-agent/: agent.ts  config.ts  index.ts
src/ai-agent/__tests__/: agent.test.ts
src/ai-agent/telemetry/: instrumentation.ts  langfuse.ts
src/ai-tools/: README.md  base.ts  bloomberg-news.ts  google-news.ts  index.ts  macro.ts  market.ts  news.ts  sector.ts  types.ts
src/ai-tools/__tests__/: bloomberg-news.test.ts  google-news.test.ts  macro.test.ts  news.test.ts
src/ai-tools/scripts/: debug_cn_mlf.ts  debug_cn_r007.ts  debug_vstoxx.ts  run_bloomberg_news.ts  run_google_news.ts  run_macro.ts  run_news.ts
src/ai/__tests__/: agent.test.ts
src/ai/tools/: example-tools.ts
src/core/data_collector/: __init__.py
src/market/: get_company.ts  get_snapshot.ts  get_timeseries.ts  list_catalog.ts  search_catalog.ts  search_input.test.ts  search_input.ts
src/market/__tests__/: get_snapshot.test.ts
src/util/: dynamodb.ts  env.ts  logger.ts
tests/: test_market_sync.py
tools/: task-manager.js
(+40 files in other folders)
