[project]
name = "aws-python"
version = "0.1.0"
description = "A SST app"
dependencies = []
requires-python = "==3.11.*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["functions", "core"]

[tool.uv.sources]
sst = { git = "https://github.com/sst/sst.git", subdirectory = "sdk/python", branch = "dev" }