[project]
name = "core"
version = "0.1.0"
description = "Core business logic for Kairos investment data platform"
requires-python = "==3.12.*"
dependencies = [
    "akshare==1.16.81",
    "pandas>=2.0.0",
    "boto3>=1.34.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"