[project]
name = "kairos-functions"
version = "0.1.0"
description = "Lambda functions for Kairos data crawling"
authors = []
requires-python = "==3.11.*"
readme = "README.md"
license = "MIT"

dependencies = [
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["functions*"]