[project]
name = "functions"
version = "0.1.0"
description = "Lambda functions for Kairos data crawling"
authors = []
dependencies = ["core", "sst"]
requires-python = "==3.11.*"
readme = "README.md"
license = "MIT"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python"]

[tool.uv.sources]
core = { workspace = true }
sst = { git = "https://github.com/sst/sst.git", branch = "dev", subdirectory = "sdk/python" }